--- a/gist9120416-8439d8cd89874d50e22ccce61d0f0f28b8973d73/clicks.css
+++ b/gist9120416-8439d8cd89874d50e22ccce61d0f0f28b8973d73/clicks.css
@@ -1,12 +1,12 @@
 h1.clicked {
     color: darksalmon;
 }
-.hide{
-    display: none;
+.rotated{
+    -webkit-transform: rotateY(1000deg);
+}
 img.logo {
-    transition:1s; 
+    /*transition:2s;*/ 
     position: absolute;
-       opacity:0%;
     left: 50%;
     top: 50%;
     width: 128px;
